Add a variable to index.js.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>To do list</title>
 </head>
 <body>
-<div class="todo-list-container"></div>
+<div class="todo-list-container">
+    
+</div>
 </body>
 </html>
