--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/035dc923c1.js" crossorigin="anonymous"></script>
-    <title>To do list</title>
-</head>
-<body>
-<div class="todo-list-container">
-
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To Do List</title>
+  </head>
+  <body>
+    <h1>Hello!</h1>
+    <section class="todo">
+      <h2 class="todo_heading">Today's To Do</h2>
+      <hr />
+      <div class="todo_body">
+        <div class="input_section">
+          <input class="todo_input" type="text" placeholder="Add to your list..." />
+          <i class="fas fa-level-down enter"></i>
+        </div>
+        <br />
+        <hr />
+        <div class="todo_list"></div>
+        <button class="clear_btn" type="button">Clear all completed</button>
+      </div>
+    </section>
+  </body>
 </html>
